--- a/elements/lisk-tree/package.json
+++ b/elements/lisk-tree/package.json
@@ -26,7 +26,7 @@
 		"format": "prettier --write '**/*'",
 		"lint": "eslint --ext .js,.ts .",
 		"lint:fix": "eslint --fix --ext .js,.ts .",
-		"test": "jest",
+		"test": "jest sparse_merkle_tree.spec.ts",
 		"test:coverage": "jest --coverage=true --coverage-reporters=text",
 		"test:ci": "jest --coverage=true --coverage-reporters=json --verbose",
 		"test:watch": "npm test -- --watch",
